--- a/package.json
+++ b/package.json
@@ -10,52 +10,46 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.6.3",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
-    "gatsby": "^5.13.1",
-    "gatsby-plugin-catch-links": "^5.13.0",
-    "gatsby-plugin-google-analytics": "^5.13.0",
+    "gatsby": "^5.13.3",
+    "gatsby-plugin-catch-links": "^5.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^3.13.0",
-    "gatsby-plugin-manifest": "^5.13.0",
-    "gatsby-plugin-offline": "^6.13.0",
-    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.13.0",
-    "gatsby-plugin-sharp": "^5.13.0",
-    "gatsby-plugin-sitemap": "^6.13.0",
-    "gatsby-plugin-typescript": "^5.13.0",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-typescript": "^5.13.1",
     "gatsby-remark-classes": "^1.0.2",
-    "gatsby-source-filesystem": "^5.13.0",
-    "gatsby-transformer-remark": "^6.13.0",
-    "gatsby-transformer-sharp": "^5.13.0",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.69.6",
+    "sass": "^1.70.0",
     "tsconfig-paths-webpack-plugin": "4.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
-    "@commitlint/cli": "18.4.3",
-    "@commitlint/config-conventional": "18.4.3",
-    "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "6.1.6",
-    "@testing-library/react": "14.1.2",
-    "@testing-library/react-hooks": "8.0.1",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
+    "@commitlint/cli": "18.6.0",
+    "@commitlint/config-conventional": "18.6.0",
+    "@types/node": "^20.11.13",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/testing-library__jest-dom": "5.14.9",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "6.16.0",
-    "@typescript-eslint/parser": "6.16.0",
-    "autoprefixer": "^10.4.16",
-    "babel-preset-gatsby": "3.13.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "autoprefixer": "^10.4.17",
+    "babel-preset-gatsby": "3.13.1",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.56.0",
@@ -64,17 +58,17 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-n": "16.6.0",
-    "eslint-plugin-prettier": "5.1.2",
+    "eslint-plugin-n": "16.6.2",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-eslint": "^4.0.4",
-    "gatsby-plugin-postcss": "^6.13.0",
-    "postcss": "^8.4.32",
-    "prettier": "3.1.1",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "postcss": "^8.4.33",
+    "prettier": "3.2.4",
     "tailwind-dracula": "^1.1.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "keywords": [
@@ -84,7 +78,7 @@
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "start": "gatsby develop -H 0.0.0.0",
-    "serve": "gatsby serve -H 0.0.0.0",
+    "serve": "gatsby serve -H 0.0.0.0 -p 8000",
     "clean": "gatsby clean",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --fix",
